--- a/views/components/nav-setting.ejs
+++ b/views/components/nav-setting.ejs
@@ -6,7 +6,7 @@
           <% if (user) { %>
             <a class="item" href="/welcome?author=<%= user._id %>">个人主页</a>
             <div class="divider"></div>
-            <a class="item" href="/welcome/create">发表文章</a>
+            <a class="item" href="/create">发表文章</a>
             <a class="item" href="/logout">登出</a>
           <% } else { %>
             <a class="item" href="/signin">登录</a>
